<resources> 
    <string name="app_name">Assignment 1</string> 
    <string name="hello_message">Hello World</string> 
    <string name="ChangeLanguage">Change Language</string> 
    <string name="Login">Login</string> 
    <string name="LoginName">Login Name</string>
    <string name="Password">Password</string> 
    <string name="RadioButton">Radio Button</string>
    <string name="CheckBox">Check Box</string>
    <string name="Switch">What does this do?</string>
    <string name="ImageButton"></string>
    <string name="yes_label">YES</string>
    <string name="no_label">NO</string>
    <string name="confirm_label">CONFIRM</string>
    <string name="switchActivity">Do you want to switch to the other Activity?</string>
    <string name="response_label">Response</string>
    <string name="yourResponse_label">Here is your response.</string>
    <string name="switchON_label">SWITCH IS ON</string>
    <string name="switchOFF_label">SWITCH IS OFF</string>
    <string name="noPermission_label">You didn\'t give permission!</string>
    <string name="start_chat">Start Chat</string>
    <string name="send">send</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_item">Add Item</string>
    <string name="go_back">Go Back</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="go_back_dialog_title">Go back confirmation.</string>
    <string name="go_back_dialog_msg">Do you wish to go back?</string>
    <string name="go_back_dialog_no_choice">Stay Here</string>
    <string name="go_back_dialog_yes_choice">Go Back</string>
    <string name="op_1_selected_toast">Option 1 selected.</string>
    <string name="op_1_selected_snack">You selected item 1</string>
    <string name="part_four_msg">Version 1.0, by Jona, Sahota.</string>
    <string name="floating_button_msg">The floating button has been clicked on.</string>
    <string name="set_msg_dialog_title">Set Message</string>
    <string name="set_msg_dialog_msg">Set the message you would like the first menu button to display.</string>
    <string name="set_msg_no_choice">Cancel</string>
    <string name="set_msg_yes_choice">Set</string>
    <string name="msg_enter_hint">Enter your message…</string>
    <string name="msg_set_toast">Message has been set!</string>








</resources>