<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    tools:context=".ListItemsActivity"
    android:layout_columnWeight="1"
    android:gravity="fill">

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="206dp"
        android:layout_height="50dp"
        android:text="@string/RadioButton" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="205dp"
        android:layout_height="49dp"
        android:text="@string/CheckBox" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="202dp"
        android:layout_height="50dp"
        android:text="@string/Switch" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:text="@string/ImageButton"
        app:srcCompat="@android:drawable/ic_menu_camera" />

</GridLayout>